@@ -1,4 +1,7 @@
 2002-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* objs.cc: finally fixed 'blood' names
+
+2002-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* Configuration.*, exult.cc: added -c option for alternate config files
 	  (quite useful if you have multiple data dirs or languages of BG/SI)
 
